--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# IntelliJ
+*.iml
+.idea/
+
+# Gradle
+.gradle/
+# Force the inclusion of the gradle jar
+!gradle/wrapper/gradle-wrapper.jar
+
+# Build directory
+build/
+
+# OS X
+**/.DS_Store
