--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    compile 'com.beust:jcommander:1.58'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
