--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,14 @@ dependencies {
     compile 'com.beust:jcommander:1.58'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'TimeAroundTheWorld',
+                'Implementation-Version': version,
+                'Main-Class': 'me.andrewmanley.timearoundtheworld.TimeAroundTheWorld'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
